--- a/index.html
+++ b/index.html
@@ -99,7 +99,66 @@
             </li>
           </ul>
         </section>
-        <section class="reservation" id="reservation"></section>
+        <section class="reservation" id="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="name-input" class="form__label">
+                Name *
+                <input
+                  type="text"
+                  class="form__input"
+                  placeholder="Name Surname"
+                  id="name-input"
+                  required
+                />
+              </label>
+              <label for="guest-input" class="form__label">
+                Number of guests *
+                <input
+                  type="number"
+                  class="form__input"
+                  placeholder="1 to 8"
+                  min="1"
+                  max="8"
+                  id="guest-input"
+                  required
+                />
+              </label>
+              <label for="date-input" class="form__label">
+                Date & time *
+                <input
+                  type="datetime-local"
+                  class="form__input"
+                  id="date-input"
+                  required
+              /></label>
+              <label for="email-input" class="form__label">
+                Your email *
+                <input
+                  type="email"
+                  class="form__input"
+                  placeholder="email@email.com"
+                  id="email-input"
+                  required
+                />
+              </label>
+            </fieldset>
+            <button class="form__button">Book a table</button>
+            <label
+              for="terms-input"
+              class="form__label form__label_type_checkbox"
+            >
+              <input
+                type="checkbox"
+                class="form__checkbox"
+                id="terms-input"
+                required
+              />
+              I agree with the terms of use
+            </label>
+          </form>
+        </section>
         <section class="menu" id="menu"></section>
         <section class="about" id="about"></section>
       </main>
