--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
             </p>
           </div>
           <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
         </section>
       </main>
       <footer class="footer" id="footer"></footer>
