adjusted footer heading size, made header image float behind heading text, removed borders around iframe, removed input for values

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form form">
             <fieldset class="form__fieldset">
-              <label for="name-input" class="form__label">
+              <label class="form__label">
                 Name *
                 <input
                   type="text"
@@ -112,7 +112,7 @@
                   required
                 />
               </label>
-              <label for="guest-input" class="form__label">
+              <label class="form__label">
                 Number of guests *
                 <input
                   type="number"
@@ -124,7 +124,7 @@
                   required
                 />
               </label>
-              <label for="date-input" class="form__label">
+              <label class="form__label">
                 Date & time *
                 <input
                   type="datetime-local"
@@ -132,7 +132,7 @@
                   id="date-input"
                   required
               /></label>
-              <label for="email-input" class="form__label">
+              <label class="form__label">
                 Your email *
                 <input
                   type="email"
@@ -144,10 +144,7 @@
               </label>
             </fieldset>
             <button class="form__button">Book a table</button>
-            <label
-              for="terms-input"
-              class="form__label form__label_type_checkbox"
-            >
+            <label class="form__label form__label_type_checkbox">
               <input
                 type="checkbox"
                 class="form__checkbox"
